# greport

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: audit.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  task.yml
.github/workflows/: ci.yml  deploy.yml  release.yml
config/: config.enterprise.sample.toml  config.multi-org.sample.toml  config.sample.toml
crates/greport-api/: Cargo.toml
crates/greport-api/src/: auth.rs  convert.rs  error.rs  main.rs  rate_limit.rs  response.rs  state.rs  sync.rs
crates/greport-api/src/routes/: aggregate.rs  batch.rs  calendar.rs  contrib.rs  health.rs  issues.rs  mod.rs  orgs.rs  projects.rs  pulls.rs  release_plan.rs  releases.rs  repos.rs  sla.rs  sync.rs
crates/greport-api/tests/: api_tests.rs
crates/greport-cli/: Cargo.toml
crates/greport-cli/src/: args.rs  config.rs  main.rs
crates/greport-cli/src/commands/: config.rs  contrib.rs  issues.rs  mod.rs  orgs.rs  pulls.rs  releases.rs  sync.rs
crates/greport-cli/src/output/: csv_output.rs  json_output.rs  markdown_output.rs  mod.rs  table_output.rs
crates/greport-core/: Cargo.toml
crates/greport-core/src/: config.rs  error.rs  lib.rs
crates/greport-core/src/client/: graphql.rs  mock_client.rs  mod.rs  octocrab_client.rs  params.rs  registry.rs  retry.rs
crates/greport-core/src/metrics/: issues.rs  mod.rs  pulls.rs  sla.rs  velocity.rs
crates/greport-core/src/models/: calendar.rs  issue.rs  mod.rs  project.rs  pull_request.rs  release.rs  release_plan.rs  repository.rs  user.rs
crates/greport-core/src/reports/: burndown.rs  mod.rs  release_notes.rs
crates/greport-db/: Cargo.toml
crates/greport-db/migrations/: 001_initial.sql  001_initial_schema.sql  002_add_organizations.sql  003_add_projects.sql
crates/greport-db/src/: lib.rs  models.rs  queries.rs
dashboard/: package-lock.json  package.json
dashboard/e2e/: calendar.spec.ts  navigation.spec.ts  planning.spec.ts
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/calendar/: page.tsx
dashboard/src/app/contributors/: page.tsx
dashboard/src/app/issues/: page.tsx
dashboard/src/app/planning/: page.tsx
dashboard/src/app/projects/: page.tsx
dashboard/src/app/projects/[org]/[number]/: page.tsx
dashboard/src/app/pulls/: page.tsx
dashboard/src/app/releases/: page.tsx
dashboard/src/app/settings/: page.tsx
dashboard/src/app/sla/: page.tsx
dashboard/src/app/velocity/: page.tsx
dashboard/src/components/calendar/: calendar-day.tsx  calendar-filters.tsx  calendar-grid.tsx  calendar-nav.tsx  event-popover.tsx
dashboard/src/components/calendar/__tests__/: calendar-day.test.tsx  calendar-grid.test.tsx  event-popover.test.tsx
dashboard/src/components/charts/: bar-chart-component.tsx  burndown-chart.tsx  pie-chart-component.tsx  trend-chart.tsx
dashboard/src/components/layout/: header.tsx  repo-provider.tsx  sidebar.tsx
dashboard/src/components/release-plan/: milestone-card.tsx  progress-bar.tsx  recent-releases.tsx  release-card.tsx  release-plan-view.tsx  release-timeline.tsx  upcoming-releases.tsx
dashboard/src/components/release-plan/__tests__/: milestone-card.test.tsx  progress-bar.test.tsx  recent-releases.test.tsx  release-card.test.tsx  release-timeline.test.tsx  upcoming-releases.test.tsx
dashboard/src/components/shared/: data-table.tsx  detail-popover.tsx  error-display.tsx  filter-panel.tsx  loading.tsx  metric-card.tsx  pagination.tsx  view-switcher.tsx
dashboard/src/components/shared/__tests__/: view-switcher.test.tsx
dashboard/src/hooks/: use-api.ts  use-repo.ts  use-repos.ts  use-settings.ts
dashboard/src/hooks/__tests__/: use-settings.test.ts
dashboard/src/lib/: api.ts  utils.ts
dashboard/src/lib/__tests__/: api.test.ts
dashboard/src/test/: factories.ts
dashboard/src/types/: api.ts
deploy/: greport-api.service  nginx-greport.conf
docker/: .env.example  .env.multi-org.example  Dockerfile.api  Dockerfile.cli  Dockerfile.dashboard  config.multi-org.toml  docker-compose.config-only.yml  docker-compose.ghcr.yml  docker-compose.multi-org.yml  docker-compose.prod.yml  docker-compose.yml
k8s/: api.yaml  configmap.yaml  dashboard.yaml  ingress.yaml  namespace.yaml  postgres.yaml  secrets.yaml
notes/: RELEASE-NOTES-v0.6.0.md  RELEASE-NOTES-v0.7.1.md  RELEASE-NOTES-v0.7.2.md
scripts/: ci-local.sh  local-ci.sh  test-api.sh
