[package]
name = "greport-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "API server for greport - GitHub reporting and analytics"

[[bin]]
name = "greport-api"
path = "src/main.rs"

[features]
default = []
vendored-openssl = ["openssl/vendored"]

[dependencies]
openssl = { workspace = true, optional = true }
# Core library
greport-core = { workspace = true }
greport-db = { workspace = true }

# Async
tokio = { workspace = true }

# Web framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Date/Time
chrono = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Configuration
dotenvy = { workspace = true }

# UUID
uuid = { workspace = true }

# Database
sqlx = { workspace = true }

# Crypto (for API key hashing)
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
axum-test = "18"
