[package]
name = "greport-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "CLI for greport - GitHub reporting and analytics"

[[bin]]
name = "greport"
path = "src/main.rs"

[features]
default = []
vendored-openssl = ["openssl/vendored"]

[dependencies]
openssl = { workspace = true, optional = true }
# Core library
greport-core = { workspace = true }

# Async
tokio = { workspace = true }

# CLI
clap = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Date/Time
chrono = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Configuration
dotenvy = { workspace = true }

# Output formatting
comfy-table = "7.1"
csv = "1.3"

# Terminal colors
colored = "3.0"

# Home directory
dirs = "5.0"

# TOML parsing
toml = "0.8"
