[package]
name = "greport-db"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Database layer for greport - GitHub reporting and analytics"

[dependencies]
# Async
tokio = { workspace = true }

# Database
sqlx = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Date/Time
chrono = { workspace = true }

# UUID
uuid = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
